# full-text-search

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
client/: main.py  run.sh  searcher.py
include/: CMakeLists.txt
include/binary/: binary.hpp
include/common/: common.hpp
include/config/: config.hpp
include/driver/: driver.hpp
include/fts/: fts.hpp
include/indexer/: indexer.hpp
include/searcher/: searcher.hpp
include/searcher-c/: searcher-c.h
src/: CMakeLists.txt
src/binary/: CMakeLists.txt  binary.cpp
src/common/: CMakeLists.txt  common.cpp  common.test.cpp
src/config/: CMakeLists.txt  config.cpp
src/driver/: CMakeLists.txt  driver.cpp  driver.test.cpp
src/fts/: CMakeLists.txt  fts.cpp  fts.test.cpp
src/indexer/: CMakeLists.txt  indexer.cpp  indexer.test.cpp
src/indexer-cli/: CMakeLists.txt  main.cpp
src/parser/: CMakeLists.txt  main.cpp
src/searcher/: CMakeLists.txt  searcher.cpp  searcher.test.cpp
src/searcher-c/: CMakeLists.txt  searcher-c.cpp
src/searcher-cli/: CMakeLists.txt  main.cpp
src/sum/: CMakeLists.txt  main.cpp
